# coursework_5

./: README.md  main.py  pyproject.toml
src/: db_manager.py  file_work.py  parser.py  table_output.py  utils.py
