[tool.poetry]
name = "coursework-5"
version = "0.1.0"
description = ""
authors = ["Hilshat76"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
idna = "^3.7"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
urllib3 = "^2.2.2"
tqdm = "^4.66.5"
prettytable = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
